--- a/books/rapport_sur_le_sauvage_de_l_aveyron/rapport_sur_le_sauvage_de_l_aveyron.css
+++ b/books/rapport_sur_le_sauvage_de_l_aveyron/rapport_sur_le_sauvage_de_l_aveyron.css
@@ -22,8 +22,10 @@
 
 [data-wb-text] #cover-title, [data-wb-text] #title {
 	padding-top: 10%;
+	padding-left: 10px;
+	padding-right: 10px;
 	font-size: 1.2em;
-	line-height: 2em;
+	line-height: 1.6em;
 	font-variant: small-caps;
 	letter-spacing: 1.5px;
 	opacity: 0.75;
@@ -62,7 +64,7 @@
 @media only screen and (min-height: 460px) {
 	
 	[data-wb-text] #cover-title, [data-wb-text] #title {
-		padding-top: 12%;
+		padding-top: 14%;
 	}
 	
 	[data-wb-text] #cover-logo1 {
@@ -74,7 +76,7 @@
 
 	[data-wb-text] #cover-title, [data-wb-text] #title {
 		padding-top: 16%;
-		font-size: 1.2em;
+		font-size: 1.3em;
 		letter-spacing: 3px;
 	}
 	
@@ -116,8 +118,10 @@
 
 	[data-wb-text] #cover-title, [data-wb-text] #title {
 		padding-top: 18%;
-		font-size: 1.45em;
-		line-height: 2em;
+		padding-left: 20px;
+		padding-right: 20px;
+		font-size: 1.5em;
+		line-height: 1.6em;
 		letter-spacing: 3.5px;
 	}
 	
